fix for bug 190256 - string bundles broken on escaped characters, and when keys cross buffer boundaries patch by bzbarsky, r=alecf, sr=jst, a=dbaron